<resources>
    <string name="app_name">Meetings</string>
    <string name="reciever_toast">Receiver started</string>
    <string name="job_toast">JobStared</string>
    <string name="password">Password:</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_username">Username</string>
    <string name="hint_position">Position</string>
    <string name="login">Login</string>
    <string name="wrong_password">Wrong password</string>
    <string name="error_connection">Internet connection error</string>
    <string name="error_username">Username must not be empty</string>
    <string name="error_password">Password must not be empty</string>
    <string name="notification_new_meting">You have new meeting! %1$d</string>
    <string name="notification_content">Tap to view meetings</string>
    <string name="meeting_name">Meeting %1$s</string>
    <string name="meeting_startDate">Starts at %1$s</string>
    <string name="meeting_endDate">Ends at %1$s</string>
    <string name="error_data">Data load error</string>
    <string name="toast_delete">Document deleted successfully</string>
    <string name="create_button">create</string>
    <string name="save_button">save</string>
    <string name="info_button">I will participate</string>
    <string name="create_error">Unable to create document</string>
    <string name="refresh">Refresh</string>
    <string name="search_title">Search</string>
    <string name="delete_title">Delete</string>
    <string name="create_maybe">Maybe</string>
    <string name="create_planned">Planned</string>
    <string name="create_emergency">Emergency</string>
    <string name="name">name:</string>
    <string name="description">Description:</string>
    <string name="startdate">StartDate:</string>
    <string name="enddate">EndDate:</string>
    <string name="members">Members:</string>
    <string name="priority">Priority:</string>
    <string name="date_time_format_long_year">dd.MM.yyyy HH:mm</string>
    <string name="date_format">dd.MM.yyyy</string>
    <string name="time_format">HH:mm</string>
    <string name="no_meetings">There is no meetings for today</string>
    <string name="add_audio">Add audio</string>
    <string name="recording">Recording…</string>
    <string name="play">Play</string>
    <string name="need_permission">Need permissions</string>

</resources>
