<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
        <TextView
                android:id="@+id/titleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintTop_toTopOf="parent"
        />

        <EditText
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="name"
                app:layout_constraintTop_toBottomOf="@id/titleName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/titleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                android:text="@string/description"
        />

        <EditText
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="tvDescription"
                app:layout_constraintTop_toBottomOf="@id/titleDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:id="@+id/titleStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startdate"

                app:layout_constraintTop_toBottomOf="@id/tvDescription"

        />
        <EditText
                android:id="@+id/tvStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="tvStartDate"
                app:layout_constraintTop_toBottomOf="@id/titleStartDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:id="@+id/titleEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enddate"

                app:layout_constraintTop_toBottomOf="@id/tvStartDate"

        />
        <EditText
                android:id="@+id/tvEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="tvEndDate"
                app:layout_constraintTop_toBottomOf="@id/titleEndDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/titleMembers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="tvMembers"
                android:text="@string/members"

                app:layout_constraintTop_toBottomOf="@id/tvEndDate"
        />
        <EditText
                android:id="@+id/tvMembers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="tvMembers"
                app:layout_constraintTop_toBottomOf="@id/titleMembers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:enabled="false"
        />
        <TextView
                android:id="@+id/titlePriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="tvPriority"
                android:text="@string/priority"
                app:layout_constraintTop_toBottomOf="@id/tvMembers"
        />
        <RadioGroup
                android:id="@+id/groupPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titlePriority"
                android:orientation="horizontal">
            <RadioButton
                    android:text="@string/create_maybe"
                    android:id="@+id/maybe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <RadioButton
                    android:id="@+id/planned"
                    android:text="@string/create_planned"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/create_emergency"
                    android:id="@+id/emergency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
            />
        </RadioGroup>

        <Button
                android:id="@+id/btnParticipate"
                android:text="@string/info_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/groupPriority"
                app:layout_constraintVertical_bias="0.95"
                android:visibility="gone"
                tools:visibility="visible"
        />
        <Button
                android:id="@+id/btnCreateNew"
                android:text="@string/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnParticipate"
        />

    </android.support.constraint.ConstraintLayout>
</ScrollView>