<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".main.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/layoutPassword"
            app:layout_constraintBottom_toTopOf="@+id/layoutPassword"
            android:text="@string/password"
    />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
    >

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:text="123456"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="@id/layoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword"
            app:layout_constraintEnd_toEndOf="@id/layoutPassword"
    />
</android.support.constraint.ConstraintLayout>